--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,32 @@
-python-multipart==0.0.5
+azure-core==1.23.1
+azure-identity==1.9.0
+cachetools==5.0.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+cryptography==36.0.2
+google-api-core==2.7.2
+google-auth==2.6.6
+googleapis-common-protos==1.56.0
+idna==3.3
+msal==1.17.0
+msal-extensions==0.3.1
+opencensus==0.9.0
+opencensus-context==0.1.2
+opencensus-ext-azure==1.1.4
+portalocker==2.4.0
+protobuf==3.20.1
+psutil==5.9.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+PyJWT==2.3.0
+pywin32==303
+requests==2.27.1
+rsa==4.8
 six==1.16.0
-astroid==2.2.5
-autopep8==1.4.4
-bokeh==2.2.3
-certifi==2020.12.5
-chardet==4.0.0
-click==7.1.2
-fastapi==0.63.0
-h11==0.12.0
-idna==2.10
-isodate==0.6.0
-isort==4.3.21
-lazy-object-proxy==1.4.2
-mccabe==0.6.1
-msrest==0.6.21
-oauthlib==3.1.0
-packaging==20.8
-pydantic==1.8.1
-pylint==2.3.1
-requests==2.25.1
-requests-oauthlib==1.3.0
-starlette==0.13.6
-typed-ast==1.4.0
-typing-extensions==3.7.4.3
-urllib3==1.26.4
-uvicorn==0.13.4
-wincertstore==0.2
+typing_extensions==4.2.0
+urllib3==1.26.9
 uvloop
 httptools
-gunicorn==20.0.4
-uvloop
-httptools
-gunicorn==20.0.4
+gunicorn
